# Hash-cracker-suite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  PHASE2_SUMMARY.md  README.md  proiject.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
Code/: Buckhash.txt  index.html
data/wordlists/: common.txt
src/: __init__.py  cracker.py
src/cli/: __init__.py  brute_mode.py  check_mode.py  dict_mode.py  hash_mode.py
src/core/: __init__.py  brute_force.py  dictionary_attack.py  hash_utils.py  password_strength.py
tests/: conftest.py  test_brute_force.py  test_cli.py  test_coverage_edges.py  test_dictionary_attack.py  test_hash_utils.py  test_password_strength.py
