[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hash-cracker-suite"
version = "0.1.0"
description = "Educational password security lab for hashing, cracking techniques, and strength analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
hash-cracker = "src.cracker:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]
