[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hash-cracker-suite"
version = "0.1.0"
description = "Educational password security lab for hashing, cracking techniques, and strength analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "pre-commit>=3.7.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0",
  "twine>=5.1.0",
]

[project.scripts]
hash-cracker = "src.cracker:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --basetemp=build/pytest-temp"
cache_dir = "build/pytest-cache"
norecursedirs = ["build"]
testpaths = ["tests"]

[tool.ruff]
cache-dir = "build/ruff-cache"
exclude = [".git", ".mypy_cache", ".pytest_cache", ".pytest_tmp", ".ruff_cache", ".venv", "build", "dist"]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "PIE", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
cache_dir = "build/mypy-cache"
python_version = "3.10"
files = ["src"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
